[gd_scene load_steps=4 format=3 uid="uid://k74d0w4efxnw"]

[ext_resource type="Texture2D" uid="uid://dqitu07tqlcf0" path="res://gui/icons/play.png" id="1_6ebrb"]
[ext_resource type="Script" uid="uid://5cdugyl4doq4" path="res://gui/history_panel_row.gd" id="1_hbhih"]
[ext_resource type="Texture2D" uid="uid://bxq3rhkyuusyw" path="res://gui/icons/x.png" id="2_hbhih"]

[node name="history_row" type="PanelContainer"]
custom_minimum_size = Vector2(100, 25)
offset_right = 193.0
offset_bottom = 25.0
size_flags_vertical = 4
script = ExtResource("1_hbhih")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 0

[node name="score_label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
text = "-----"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="roll_label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
mouse_filter = 0
text = "-----"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="replay_button" type="Button" parent="HBoxContainer"]
layout_mode = 2
icon = ExtResource("1_6ebrb")

[node name="delete_button" type="Button" parent="HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_hbhih")

[connection signal="mouse_entered" from="HBoxContainer/roll_label" to="." method="_on_roll_label_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/roll_label" to="." method="_on_roll_label_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/replay_button" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="HBoxContainer/delete_button" to="." method="_on_delete_button_pressed"]
